deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-dashboard-deployment
  labels:
    app: github-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-dashboard
  template:
    metadata:
      labels:
        app: github-dashboard
    spec:
      containers:
        - name: github-dashboard
          image: ghcr.io/chriskinsman/github-action-dashboard:edge
          args: ["node", "index.js"]
          ports:
            - containerPort: 8080
