service.yml
apiVersion: v1
kind: Service
metadata:
  name: github-dashboard
  namespace: github-demo
  labels:
    app.kubernetes.io/name: github-dashboard
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: github-dashboard
