ingress.yml
ingress: -----
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-dashboard-ingress
  namespace: github-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
        - github-dashboard-demo.sk-nonprod.fldigital.xom.cloud
      secretName: github-dashboard-demo.sk-nonprod.fldigital.xom.cloud-cert
  rules:
    - host: github-dashboard-demo.sk-nonprod.fldigital.xom.cloud
      http:
        paths:
          - path: /
            pathType: Prefix # `pathType` no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
            backend:
              service:
                name: github-dashboard
                port:
                  number: 8080
